fix progress bar mode visibility and inconsistency

--- a/minmath/static/main.css
+++ b/minmath/static/main.css
@@ -304,6 +304,7 @@ button.acc-button {
 	}
 
 #progress-bar {
+    visibility: hidden;
     height: 2px;
     width: 100%;
     background-color: var(--accent);
